cmake_minimum_required(VERSION 3.7)
project(learnuv)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        build/gyp/data/win/large-pdb-shim.cc
        build/gyp/test/actions/generated-header/main.cc
        build/gyp/test/actions/src/subdir1/program.c
        build/gyp/test/actions-multiple/src/foo.c
        build/gyp/test/actions-multiple/src/main.c
        build/gyp/test/actions-none/src/foo.cc
        build/gyp/test/additional-targets/src/dir1/lib1.c
        build/gyp/test/arflags/lib.cc
        build/gyp/test/assembly/src/lib1.c
        build/gyp/test/assembly/src/program.c
        build/gyp/test/build-option/hello.c
        build/gyp/test/builddir/src/subdir2/subdir3/subdir4/subdir5/prog5.c
        build/gyp/test/builddir/src/subdir2/subdir3/subdir4/prog4.c
        build/gyp/test/builddir/src/subdir2/subdir3/prog3.c
        build/gyp/test/builddir/src/subdir2/prog2.c
        build/gyp/test/builddir/src/func1.c
        build/gyp/test/builddir/src/func2.c
        build/gyp/test/builddir/src/func3.c
        build/gyp/test/builddir/src/func4.c
        build/gyp/test/builddir/src/func5.c
        build/gyp/test/builddir/src/prog1.c
        build/gyp/test/cflags/cflags.c
        build/gyp/test/compilable/src/lib1.cpp
        build/gyp/test/compilable/src/lib1.hpp
        build/gyp/test/compilable/src/program.cpp
        build/gyp/test/compiler-override/cxxtest.cc
        build/gyp/test/compiler-override/test.c
        build/gyp/test/conditions/elseif/program.cc
        build/gyp/test/configurations/basics/configurations.c
        build/gyp/test/configurations/inheritance/configurations.c
        build/gyp/test/configurations/target_platform/front.c
        build/gyp/test/configurations/target_platform/left.c
        build/gyp/test/configurations/target_platform/right.c
        build/gyp/test/configurations/x64/configurations.c
        build/gyp/test/copies/src/foo.c
        build/gyp/test/cxxflags/cxxflags.cc
        build/gyp/test/defines/defines.c
        build/gyp/test/defines-escaping/defines-escaping.c
        build/gyp/test/dependencies/b/b.c
        build/gyp/test/dependencies/b/b3.c
        build/gyp/test/dependencies/c/c.c
        build/gyp/test/dependencies/c/d.c
        build/gyp/test/dependencies/module-dep/a.cc
        build/gyp/test/dependencies/module-dep/dll.cc
        build/gyp/test/dependencies/module-dep/exe.cc
        build/gyp/test/dependencies/sharedlib-linksettings/program.c
        build/gyp/test/dependencies/sharedlib-linksettings/sharedlib.c
        build/gyp/test/dependencies/sharedlib-linksettings/staticlib.c
        build/gyp/test/dependencies/a.c
        build/gyp/test/dependencies/main.c
        build/gyp/test/dependency-copy/src/file1.c
        build/gyp/test/dependency-copy/src/file2.c
        build/gyp/test/determinism/main.cc
        build/gyp/test/determinism/solib.cc
        build/gyp/test/exclusion/hello.c
        build/gyp/test/external-cross-compile/src/bogus1.cc
        build/gyp/test/external-cross-compile/src/bogus2.c
        build/gyp/test/external-cross-compile/src/program.cc
        build/gyp/test/external-cross-compile/src/test1.cc
        build/gyp/test/external-cross-compile/src/test2.c
        build/gyp/test/external-cross-compile/src/test3.cc
        build/gyp/test/external-cross-compile/src/test4.c
        build/gyp/test/generator-output/actions/subdir1/program.c
        build/gyp/test/generator-output/mac-bundle/header.h
        build/gyp/test/generator-output/mac-bundle/main.c
        build/gyp/test/generator-output/rules/subdir1/program.c
        build/gyp/test/generator-output/src/inc1/include1.h
        build/gyp/test/generator-output/src/subdir2/deeper/deeper.c
        build/gyp/test/generator-output/src/subdir2/deeper/deeper.h
        build/gyp/test/generator-output/src/subdir2/inc2/include2.h
        build/gyp/test/generator-output/src/subdir2/prog2.c
        build/gyp/test/generator-output/src/subdir3/inc3/include3.h
        build/gyp/test/generator-output/src/subdir3/prog3.c
        build/gyp/test/generator-output/src/inc.h
        build/gyp/test/generator-output/src/prog1.c
        build/gyp/test/hard_dependency/src/a.c
        build/gyp/test/hard_dependency/src/a.h
        build/gyp/test/hard_dependency/src/b.c
        build/gyp/test/hard_dependency/src/b.h
        build/gyp/test/hard_dependency/src/c.c
        build/gyp/test/hard_dependency/src/c.h
        build/gyp/test/hard_dependency/src/d.c
        build/gyp/test/hello/hello.c
        build/gyp/test/hello/hello2.c
        build/gyp/test/home_dot_gyp/src/printfoo.c
        build/gyp/test/include_dirs/src/inc1/include1.h
        build/gyp/test/include_dirs/src/shadow1/shadow.h
        build/gyp/test/include_dirs/src/shadow2/shadow.h
        build/gyp/test/include_dirs/src/subdir/inc2/include2.h
        build/gyp/test/include_dirs/src/subdir/inc.h
        build/gyp/test/include_dirs/src/subdir/subdir_includes.c
        build/gyp/test/include_dirs/src/inc.h
        build/gyp/test/include_dirs/src/includes.c
        build/gyp/test/ios/app-bundle/tool_main.cc
        build/gyp/test/ios/copies-with-xcode-envvars/empty.c
        build/gyp/test/ios/deployment-target/check-version-min.c
        build/gyp/test/ios/extension/ActionExtension/ActionViewController.h
        build/gyp/test/ios/extension/ExtensionContainer/AppDelegate.h
        build/gyp/test/ios/extension/ExtensionContainer/ViewController.h
        build/gyp/test/ios/framework/iOSFramework/iOSFramework.h
        build/gyp/test/ios/framework/iOSFramework/Thing.h
        build/gyp/test/ios/watch/WatchContainer/AppDelegate.h
        build/gyp/test/ios/watch/WatchContainer/ViewController.h
        build/gyp/test/ios/watch/WatchKitExtension/InterfaceController.h
        build/gyp/test/ios/xctests/App/AppDelegate.h
        build/gyp/test/ios/xctests/App/ViewController.h
        build/gyp/test/library/src/lib1.c
        build/gyp/test/library/src/lib1_moveable.c
        build/gyp/test/library/src/lib2.c
        build/gyp/test/library/src/lib2_moveable.c
        build/gyp/test/library/src/program.c
        build/gyp/test/library_dirs/subdir/hello.cc
        build/gyp/test/library_dirs/subdir/mylib.cc
        build/gyp/test/library_dirs/subdir/mylib.h
        build/gyp/test/link-dependency/main.c
        build/gyp/test/link-dependency/mymalloc.c
        build/gyp/test/link-objects/base.c
        build/gyp/test/link-objects/extra.c
        build/gyp/test/linux/implicit-rpath/file.c
        build/gyp/test/linux/implicit-rpath/main.c
        build/gyp/test/linux/ldflags-duplicates/lib1.c
        build/gyp/test/linux/ldflags-duplicates/lib2.c
        build/gyp/test/linux/ldflags-duplicates/main.c
        build/gyp/test/linux/target-rpath/file.c
        build/gyp/test/linux/target-rpath/main.c
        build/gyp/test/mac/app-bundle/TestApp/TestAppAppDelegate.h
        build/gyp/test/mac/app-bundle/empty.c
        build/gyp/test/mac/archs/empty_main.cc
        build/gyp/test/mac/archs/file_a.cc
        build/gyp/test/mac/archs/file_a.h
        build/gyp/test/mac/archs/file_b.cc
        build/gyp/test/mac/archs/file_b.h
        build/gyp/test/mac/archs/file_c.cc
        build/gyp/test/mac/archs/file_d.cc
        build/gyp/test/mac/archs/header.h
        build/gyp/test/mac/archs/my_file.cc
        build/gyp/test/mac/archs/my_main_file.cc
        build/gyp/test/mac/cflags/ccfile.cc
        build/gyp/test/mac/cflags/ccfile_withcflags.cc
        build/gyp/test/mac/cflags/cfile.c
        build/gyp/test/mac/cflags/cppfile.cpp
        build/gyp/test/mac/cflags/cppfile_withcflags.cpp
        build/gyp/test/mac/cflags/cxxfile.cxx
        build/gyp/test/mac/cflags/cxxfile_withcflags.cxx
        build/gyp/test/mac/clang-cxx-language-standard/c++11.cc
        build/gyp/test/mac/clang-cxx-language-standard/c++98.cc
        build/gyp/test/mac/clang-cxx-library/libc++.cc
        build/gyp/test/mac/clang-cxx-library/libstdc++.cc
        build/gyp/test/mac/copies-with-xcode-envvars/empty.c
        build/gyp/test/mac/copy-dylib/empty.c
        build/gyp/test/mac/debuginfo/file.c
        build/gyp/test/mac/depend-on-bundle/bundle.c
        build/gyp/test/mac/depend-on-bundle/executable.c
        build/gyp/test/mac/deployment-target/check-version-min.c
        build/gyp/test/mac/framework/TestFramework/ObjCVector.h
        build/gyp/test/mac/framework/TestFramework/ObjCVectorInternal.h
        build/gyp/test/mac/framework/empty.c
        build/gyp/test/mac/framework-dirs/calculate.c
        build/gyp/test/mac/framework-headers/myframework.h
        build/gyp/test/mac/identical-name/proxy/testlib/testlib.cc
        build/gyp/test/mac/identical-name/proxy/proxy.cc
        build/gyp/test/mac/identical-name/testlib/main.cc
        build/gyp/test/mac/identical-name/testlib/void.cc
        build/gyp/test/mac/infoplist-process/main.c
        build/gyp/test/mac/installname/file.c
        build/gyp/test/mac/installname/main.c
        build/gyp/test/mac/kext/GypKext/GypKext.c
        build/gyp/test/mac/ldflags/subdirectory/file.c
        build/gyp/test/mac/ldflags-libtool/file.c
        build/gyp/test/mac/libraries/subdir/hello.cc
        build/gyp/test/mac/libraries/subdir/mylib.c
        build/gyp/test/mac/libtool-zero/mylib.c
        build/gyp/test/mac/loadable-module/module.c
        build/gyp/test/mac/loadable-module-bundle-product-extension/src.cc
        build/gyp/test/mac/lto/ccfile.cc
        build/gyp/test/mac/lto/cfile.c
        build/gyp/test/mac/missing-cfbundlesignature/file.c
        build/gyp/test/mac/non-strs-flattened-to-env/main.c
        build/gyp/test/mac/objc-arc/c-file.c
        build/gyp/test/mac/objc-arc/cc-file.cc
        build/gyp/test/mac/objc-gc/c-file.c
        build/gyp/test/mac/objc-gc/cc-file.cc
        build/gyp/test/mac/postbuild-copy-bundle/empty.c
        build/gyp/test/mac/postbuild-copy-bundle/main.c
        build/gyp/test/mac/postbuild-defaults/main.c
        build/gyp/test/mac/postbuild-fail/file.c
        build/gyp/test/mac/postbuild-multiple-configurations/main.c
        build/gyp/test/mac/postbuild-static-library/empty.c
        build/gyp/test/mac/postbuilds/file.c
        build/gyp/test/mac/postbuilds/file_g.c
        build/gyp/test/mac/postbuilds/file_h.c
        build/gyp/test/mac/prefixheader/file.c
        build/gyp/test/mac/prefixheader/file.cc
        build/gyp/test/mac/prefixheader/header.h
        build/gyp/test/mac/rebuild/empty.c
        build/gyp/test/mac/rebuild/main.c
        build/gyp/test/mac/rpath/file.c
        build/gyp/test/mac/rpath/main.c
        build/gyp/test/mac/sdkroot/file.cc
        build/gyp/test/mac/sourceless-module/empty.c
        build/gyp/test/mac/sourceless-module/fun.c
        build/gyp/test/mac/strip/subdirectory/nested_file.c
        build/gyp/test/mac/strip/file.c
        build/gyp/test/mac/strip/main.c
        build/gyp/test/mac/type_envvars/file.c
        build/gyp/test/mac/unicode-settings/file.cc
        build/gyp/test/mac/xcode-env-order/main.c
        build/gyp/test/mac/xcode-gcc/aliasing.cc
        build/gyp/test/mac/xcode-gcc/valid_c.c
        build/gyp/test/mac/xcode-gcc/valid_cc.cc
        build/gyp/test/mac/xcode-gcc/warn_about_invalid_offsetof_macro.cc
        build/gyp/test/mac/xcode-gcc/warn_about_missing_newline.c
        build/gyp/test/mac/xcode-support-actions/source.c
        build/gyp/test/mac/xctest/MyClass.h
        build/gyp/test/mac/xcuitest/MyAppDelegate.h
        build/gyp/test/make/noload/lib/shared.c
        build/gyp/test/make/noload/lib/shared.h
        build/gyp/test/make/noload/main.c
        build/gyp/test/make/main.cc
        build/gyp/test/make/main.h
        build/gyp/test/make_global_settings/full-toolchain/bar.cc
        build/gyp/test/make_global_settings/full-toolchain/foo.c
        build/gyp/test/module/src/lib1.c
        build/gyp/test/module/src/lib2.c
        build/gyp/test/module/src/program.c
        build/gyp/test/msvs/buildevents/main.cc
        build/gyp/test/msvs/config_attrs/hello.c
        build/gyp/test/msvs/external_builder/hello.cpp
        build/gyp/test/msvs/list_excluded/hello.cpp
        build/gyp/test/msvs/list_excluded/hello_mac.cpp
        build/gyp/test/msvs/props/hello.c
        build/gyp/test/msvs/shared_output/there/there.c
        build/gyp/test/msvs/shared_output/hello.c
        build/gyp/test/msvs/uldi2010/hello.c
        build/gyp/test/msvs/uldi2010/hello2.c
        build/gyp/test/multiple-targets/src/common.c
        build/gyp/test/multiple-targets/src/prog1.c
        build/gyp/test/multiple-targets/src/prog2.c
        build/gyp/test/ninja/action_dependencies/src/a.c
        build/gyp/test/ninja/action_dependencies/src/a.h
        build/gyp/test/ninja/action_dependencies/src/b.c
        build/gyp/test/ninja/action_dependencies/src/b.h
        build/gyp/test/ninja/action_dependencies/src/c.c
        build/gyp/test/ninja/action_dependencies/src/c.h
        build/gyp/test/ninja/chained-dependency/chained.c
        build/gyp/test/ninja/normalize-paths-win/hello.cc
        build/gyp/test/ninja/solibs_avoid_relinking/main.cc
        build/gyp/test/ninja/solibs_avoid_relinking/solib.cc
        build/gyp/test/ninja/use-custom-environment-files/use-custom-environment-files.cc
        build/gyp/test/no-cpp/src/call-f-main.c
        build/gyp/test/no-cpp/src/empty-main.c
        build/gyp/test/no-cpp/src/f.cc
        build/gyp/test/product/hello.c
        build/gyp/test/prune_targets/lib1.cc
        build/gyp/test/prune_targets/lib2.cc
        build/gyp/test/prune_targets/lib3.cc
        build/gyp/test/prune_targets/lib_indirect.cc
        build/gyp/test/prune_targets/program.cc
        build/gyp/test/relative/foo/a/c/c.cc
        build/gyp/test/relative/foo/a/a.cc
        build/gyp/test/relative/foo/b/b.cc
        build/gyp/test/rename/filecase/file.c
        build/gyp/test/rules/src/subdir1/program.c
        build/gyp/test/rules/src/subdir2/program.c
        build/gyp/test/rules/src/subdir3/program.c
        build/gyp/test/rules/src/subdir4/program.c
        build/gyp/test/rules-dirname/src/subdir/main.cc
        build/gyp/test/rules-rebuild/src/main.c
        build/gyp/test/rules-use-built-dependencies/src/main.cc
        build/gyp/test/rules-variables/src/input_name/test.c
        build/gyp/test/rules-variables/src/input_path/subdir/test.c
        build/gyp/test/rules-variables/src/subdir/input_dirname.c
        build/gyp/test/rules-variables/src/subdir/test.c
        build/gyp/test/rules-variables/src/input_ext.c
        build/gyp/test/rules-variables/src/test.input_root.c
        build/gyp/test/same-gyp-name/src/subdir1/main1.cc
        build/gyp/test/same-gyp-name/src/subdir2/main2.cc
        build/gyp/test/same-source-file-name/src/subdir1/func.c
        build/gyp/test/same-source-file-name/src/subdir2/func.c
        build/gyp/test/same-source-file-name/src/func.c
        build/gyp/test/same-source-file-name/src/prog1.c
        build/gyp/test/same-source-file-name/src/prog2.c
        build/gyp/test/same-source-file-name/src/prog3.c
        build/gyp/test/sanitize-rule-names/hello.cc
        build/gyp/test/sibling/src/prog1/prog1.c
        build/gyp/test/sibling/src/prog2/prog2.c
        build/gyp/test/standalone-static-library/mylib.c
        build/gyp/test/standalone-static-library/prog.c
        build/gyp/test/subdirectory/src/subdir/subdir2/prog3.c
        build/gyp/test/subdirectory/src/subdir/prog2.c
        build/gyp/test/subdirectory/src/prog1.c
        build/gyp/test/symlinks/hello.c
        build/gyp/test/target/hello.c
        build/gyp/test/toolsets/main.cc
        build/gyp/test/toolsets/toolsets.cc
        build/gyp/test/toolsets/toolsets_shared.cc
        build/gyp/test/toplevel-dir/src/sub1/prog1.c
        build/gyp/test/toplevel-dir/src/sub2/prog2.c
        build/gyp/test/variables/latelate/src/program.cc
        build/gyp/test/variables/variable-in-path/C1/hello.cc
        build/gyp/test/win/asm-files/hello.cc
        build/gyp/test/win/compiler-flags/subdir/header.h
        build/gyp/test/win/compiler-flags/additional-include-dirs.cc
        build/gyp/test/win/compiler-flags/additional-options.cc
        build/gyp/test/win/compiler-flags/buffer-security.cc
        build/gyp/test/win/compiler-flags/calling-convention.cc
        build/gyp/test/win/compiler-flags/character-set-mbcs.cc
        build/gyp/test/win/compiler-flags/character-set-unicode.cc
        build/gyp/test/win/compiler-flags/compile-as-managed.cc
        build/gyp/test/win/compiler-flags/compile-as-winrt.cc
        build/gyp/test/win/compiler-flags/default-char-is-unsigned.cc
        build/gyp/test/win/compiler-flags/disable-specific-warnings.cc
        build/gyp/test/win/compiler-flags/enable-enhanced-instruction-set.cc
        build/gyp/test/win/compiler-flags/exception-handling-on.cc
        build/gyp/test/win/compiler-flags/floating-point-model-fast.cc
        build/gyp/test/win/compiler-flags/floating-point-model-precise.cc
        build/gyp/test/win/compiler-flags/floating-point-model-strict.cc
        build/gyp/test/win/compiler-flags/force-include-files-with-precompiled.cc
        build/gyp/test/win/compiler-flags/force-include-files.cc
        build/gyp/test/win/compiler-flags/function-level-linking.cc
        build/gyp/test/win/compiler-flags/hello.cc
        build/gyp/test/win/compiler-flags/pdbname.cc
        build/gyp/test/win/compiler-flags/precomp.cc
        build/gyp/test/win/compiler-flags/rtti-on.cc
        build/gyp/test/win/compiler-flags/runtime-checks.cc
        build/gyp/test/win/compiler-flags/runtime-library-md.cc
        build/gyp/test/win/compiler-flags/runtime-library-mdd.cc
        build/gyp/test/win/compiler-flags/runtime-library-mt.cc
        build/gyp/test/win/compiler-flags/runtime-library-mtd.cc
        build/gyp/test/win/compiler-flags/treat-wchar-t-as-built-in-type1.cc
        build/gyp/test/win/compiler-flags/treat-wchar-t-as-built-in-type2.cc
        build/gyp/test/win/compiler-flags/uninit.cc
        build/gyp/test/win/compiler-flags/warning-as-error.cc
        build/gyp/test/win/compiler-flags/warning-level1.cc
        build/gyp/test/win/compiler-flags/warning-level2.cc
        build/gyp/test/win/compiler-flags/warning-level3.cc
        build/gyp/test/win/compiler-flags/warning-level4.cc
        build/gyp/test/win/enable-winrt/dllmain.cc
        build/gyp/test/win/generator-output-different-drive/prog.c
        build/gyp/test/win/idl-excluded/program.cc
        build/gyp/test/win/idl-includedirs/hello.cc
        build/gyp/test/win/idl-rules/history_indexer_user.cc
        build/gyp/test/win/importlib/dll_no_exports.cc
        build/gyp/test/win/importlib/has-exports.cc
        build/gyp/test/win/importlib/hello.cc
        build/gyp/test/win/large-pdb/dllmain.cc
        build/gyp/test/win/large-pdb/main.cc
        build/gyp/test/win/lib-crosscompile/answer.cc
        build/gyp/test/win/lib-crosscompile/answer.h
        build/gyp/test/win/lib-flags/answer.cc
        build/gyp/test/win/lib-flags/answer.h
        build/gyp/test/win/linker-flags/a/x.cc
        build/gyp/test/win/linker-flags/a/z.cc
        build/gyp/test/win/linker-flags/b/y.cc
        build/gyp/test/win/linker-flags/additional-deps.cc
        build/gyp/test/win/linker-flags/deffile.cc
        build/gyp/test/win/linker-flags/delay-load.cc
        build/gyp/test/win/linker-flags/entrypointsymbol.cc
        build/gyp/test/win/linker-flags/hello.cc
        build/gyp/test/win/linker-flags/inline_test.cc
        build/gyp/test/win/linker-flags/inline_test.h
        build/gyp/test/win/linker-flags/inline_test_main.cc
        build/gyp/test/win/linker-flags/library-adjust.cc
        build/gyp/test/win/linker-flags/library-directories-define.cc
        build/gyp/test/win/linker-flags/library-directories-reference.cc
        build/gyp/test/win/linker-flags/link-warning.cc
        build/gyp/test/win/linker-flags/main-crt.c
        build/gyp/test/win/linker-flags/manifest-in-comment.cc
        build/gyp/test/win/linker-flags/mapfile.cc
        build/gyp/test/win/linker-flags/no-default-libs.cc
        build/gyp/test/win/linker-flags/nodefaultlib.cc
        build/gyp/test/win/linker-flags/opt-icf.cc
        build/gyp/test/win/linker-flags/opt-ref.cc
        build/gyp/test/win/linker-flags/safeseh_hello.cc
        build/gyp/test/win/linker-flags/subsystem-windows.cc
        build/gyp/test/win/linker-flags/x.cc
        build/gyp/test/win/linker-flags/y.cc
        build/gyp/test/win/linker-flags/z.cc
        build/gyp/test/win/long-command-line/function.cc
        build/gyp/test/win/long-command-line/hello.cc
        build/gyp/test/win/ml-safeseh/hello.cc
        build/gyp/test/win/precompiled/hello.c
        build/gyp/test/win/precompiled/hello2.c
        build/gyp/test/win/precompiled/precomp.c
        build/gyp/test/win/rc-build/subdir/include.h
        build/gyp/test/win/rc-build/hello.cpp
        build/gyp/test/win/rc-build/hello.h
        build/gyp/test/win/rc-build/Resource.h
        build/gyp/test/win/rc-build/targetver.h
        build/gyp/test/win/shard/hello.cc
        build/gyp/test/win/shard/hello1.cc
        build/gyp/test/win/shard/hello2.cc
        build/gyp/test/win/shard/hello3.cc
        build/gyp/test/win/shard/hello4.cc
        build/gyp/test/win/system-include/bar/header.h
        build/gyp/test/win/system-include/common/commonheader.h
        build/gyp/test/win/system-include/foo/header.h
        build/gyp/test/win/system-include/main.cc
        build/gyp/test/win/uldi/a.cc
        build/gyp/test/win/uldi/b.cc
        build/gyp/test/win/uldi/dll.cc
        build/gyp/test/win/uldi/exe.cc
        build/gyp/test/win/uldi/main.cc
        build/gyp/test/win/vs-macros/hello.cc
        build/gyp/test/win/win-driver-target-type/win-driver-target-type.c
        build/gyp/test/win/win-driver-target-type/win-driver-target-type.h
        build/gyp/test/win/winrt-app-type-revision/dllmain.cc
        build/gyp/test/win/winrt-target-platform-version/dllmain.cc
        build/gyp/test/xcode-ninja/list_excluded/hello.cpp
        build/gyp/test/xcode-ninja/list_excluded/hello_excluded.cpp
        deps/libuv/include/android-ifaddrs.h
        deps/libuv/include/pthread-fixes.h
        deps/libuv/include/stdint-msvc2008.h
        deps/libuv/include/tree.h
        deps/libuv/include/uv-aix.h
        deps/libuv/include/uv-bsd.h
        deps/libuv/include/uv-darwin.h
        deps/libuv/include/uv-errno.h
        deps/libuv/include/uv-linux.h
        deps/libuv/include/uv-sunos.h
        deps/libuv/include/uv-threadpool.h
        deps/libuv/include/uv-unix.h
        deps/libuv/include/uv-version.h
        deps/libuv/include/uv-win.h
        deps/libuv/include/uv.h
        deps/libuv/samples/socks5-proxy/client.c
        deps/libuv/samples/socks5-proxy/defs.h
        deps/libuv/samples/socks5-proxy/getopt.c
        deps/libuv/samples/socks5-proxy/main.c
        deps/libuv/samples/socks5-proxy/s5.c
        deps/libuv/samples/socks5-proxy/s5.h
        deps/libuv/samples/socks5-proxy/server.c
        deps/libuv/samples/socks5-proxy/util.c
        deps/libuv/src/unix/aix.c
        deps/libuv/src/unix/android-ifaddrs.c
        deps/libuv/src/unix/async.c
        deps/libuv/src/unix/atomic-ops.h
        deps/libuv/src/unix/core.c
        deps/libuv/src/unix/darwin-proctitle.c
        deps/libuv/src/unix/darwin.c
        deps/libuv/src/unix/dl.c
        deps/libuv/src/unix/freebsd.c
        deps/libuv/src/unix/fs.c
        deps/libuv/src/unix/fsevents.c
        deps/libuv/src/unix/getaddrinfo.c
        deps/libuv/src/unix/getnameinfo.c
        deps/libuv/src/unix/internal.h
        deps/libuv/src/unix/kqueue.c
        deps/libuv/src/unix/linux-core.c
        deps/libuv/src/unix/linux-inotify.c
        deps/libuv/src/unix/linux-syscalls.c
        deps/libuv/src/unix/linux-syscalls.h
        deps/libuv/src/unix/loop-watcher.c
        deps/libuv/src/unix/loop.c
        deps/libuv/src/unix/netbsd.c
        deps/libuv/src/unix/openbsd.c
        deps/libuv/src/unix/pipe.c
        deps/libuv/src/unix/poll.c
        deps/libuv/src/unix/process.c
        deps/libuv/src/unix/proctitle.c
        deps/libuv/src/unix/pthread-fixes.c
        deps/libuv/src/unix/signal.c
        deps/libuv/src/unix/spinlock.h
        deps/libuv/src/unix/stream.c
        deps/libuv/src/unix/sunos.c
        deps/libuv/src/unix/tcp.c
        deps/libuv/src/unix/thread.c
        deps/libuv/src/unix/timer.c
        deps/libuv/src/unix/tty.c
        deps/libuv/src/unix/udp.c
        deps/libuv/src/win/async.c
        deps/libuv/src/win/atomicops-inl.h
        deps/libuv/src/win/core.c
        deps/libuv/src/win/dl.c
        deps/libuv/src/win/error.c
        deps/libuv/src/win/fs-event.c
        deps/libuv/src/win/fs.c
        deps/libuv/src/win/getaddrinfo.c
        deps/libuv/src/win/getnameinfo.c
        deps/libuv/src/win/handle-inl.h
        deps/libuv/src/win/handle.c
        deps/libuv/src/win/internal.h
        deps/libuv/src/win/loop-watcher.c
        deps/libuv/src/win/pipe.c
        deps/libuv/src/win/poll.c
        deps/libuv/src/win/process-stdio.c
        deps/libuv/src/win/process.c
        deps/libuv/src/win/req-inl.h
        deps/libuv/src/win/req.c
        deps/libuv/src/win/signal.c
        deps/libuv/src/win/stream-inl.h
        deps/libuv/src/win/stream.c
        deps/libuv/src/win/tcp.c
        deps/libuv/src/win/thread.c
        deps/libuv/src/win/timer.c
        deps/libuv/src/win/tty.c
        deps/libuv/src/win/udp.c
        deps/libuv/src/win/util.c
        deps/libuv/src/win/winapi.c
        deps/libuv/src/win/winapi.h
        deps/libuv/src/win/winsock.c
        deps/libuv/src/win/winsock.h
        deps/libuv/src/fs-poll.c
        deps/libuv/src/heap-inl.h
        deps/libuv/src/inet.c
        deps/libuv/src/queue.h
        deps/libuv/src/threadpool.c
        deps/libuv/src/uv-common.c
        deps/libuv/src/uv-common.h
        deps/libuv/src/version.c
        deps/libuv/test/benchmark-async-pummel.c
        deps/libuv/test/benchmark-async.c
        deps/libuv/test/benchmark-fs-stat.c
        deps/libuv/test/benchmark-getaddrinfo.c
        deps/libuv/test/benchmark-list.h
        deps/libuv/test/benchmark-loop-count.c
        deps/libuv/test/benchmark-million-async.c
        deps/libuv/test/benchmark-million-timers.c
        deps/libuv/test/benchmark-multi-accept.c
        deps/libuv/test/benchmark-ping-pongs.c
        deps/libuv/test/benchmark-pound.c
        deps/libuv/test/benchmark-pump.c
        deps/libuv/test/benchmark-sizes.c
        deps/libuv/test/benchmark-spawn.c
        deps/libuv/test/benchmark-tcp-write-batch.c
        deps/libuv/test/benchmark-thread.c
        deps/libuv/test/benchmark-udp-pummel.c
        deps/libuv/test/blackhole-server.c
        deps/libuv/test/dns-server.c
        deps/libuv/test/echo-server.c
        deps/libuv/test/run-benchmarks.c
        deps/libuv/test/run-tests.c
        deps/libuv/test/runner-unix.c
        deps/libuv/test/runner-unix.h
        deps/libuv/test/runner-win.c
        deps/libuv/test/runner-win.h
        deps/libuv/test/runner.c
        deps/libuv/test/runner.h
        deps/libuv/test/task.h
        deps/libuv/test/test-active.c
        deps/libuv/test/test-async-null-cb.c
        deps/libuv/test/test-async.c
        deps/libuv/test/test-barrier.c
        deps/libuv/test/test-callback-order.c
        deps/libuv/test/test-callback-stack.c
        deps/libuv/test/test-close-fd.c
        deps/libuv/test/test-close-order.c
        deps/libuv/test/test-condvar.c
        deps/libuv/test/test-connection-fail.c
        deps/libuv/test/test-cwd-and-chdir.c
        deps/libuv/test/test-default-loop-close.c
        deps/libuv/test/test-delayed-accept.c
        deps/libuv/test/test-dlerror.c
        deps/libuv/test/test-embed.c
        deps/libuv/test/test-emfile.c
        deps/libuv/test/test-error.c
        deps/libuv/test/test-fail-always.c
        deps/libuv/test/test-fs-event.c
        deps/libuv/test/test-fs-poll.c
        deps/libuv/test/test-fs.c
        deps/libuv/test/test-get-currentexe.c
        deps/libuv/test/test-get-loadavg.c
        deps/libuv/test/test-get-memory.c
        deps/libuv/test/test-getaddrinfo.c
        deps/libuv/test/test-getnameinfo.c
        deps/libuv/test/test-getsockname.c
        deps/libuv/test/test-handle-fileno.c
        deps/libuv/test/test-homedir.c
        deps/libuv/test/test-hrtime.c
        deps/libuv/test/test-idle.c
        deps/libuv/test/test-ip4-addr.c
        deps/libuv/test/test-ip6-addr.c
        deps/libuv/test/test-ipc-send-recv.c
        deps/libuv/test/test-ipc.c
        deps/libuv/test/test-list.h
        deps/libuv/test/test-loop-alive.c
        deps/libuv/test/test-loop-close.c
        deps/libuv/test/test-loop-configure.c
        deps/libuv/test/test-loop-handles.c
        deps/libuv/test/test-loop-stop.c
        deps/libuv/test/test-loop-time.c
        deps/libuv/test/test-multiple-listen.c
        deps/libuv/test/test-mutexes.c
        deps/libuv/test/test-osx-select.c
        deps/libuv/test/test-pass-always.c
        deps/libuv/test/test-ping-pong.c
        deps/libuv/test/test-pipe-bind-error.c
        deps/libuv/test/test-pipe-close-stdout-read-stdin.c
        deps/libuv/test/test-pipe-connect-error.c
        deps/libuv/test/test-pipe-connect-multiple.c
        deps/libuv/test/test-pipe-connect-prepare.c
        deps/libuv/test/test-pipe-getsockname.c
        deps/libuv/test/test-pipe-pending-instances.c
        deps/libuv/test/test-pipe-sendmsg.c
        deps/libuv/test/test-pipe-server-close.c
        deps/libuv/test/test-pipe-set-non-blocking.c
        deps/libuv/test/test-platform-output.c
        deps/libuv/test/test-poll-close-doesnt-corrupt-stack.c
        deps/libuv/test/test-poll-close.c
        deps/libuv/test/test-poll-closesocket.c
        deps/libuv/test/test-poll.c
        deps/libuv/test/test-process-title.c
        deps/libuv/test/test-ref.c
        deps/libuv/test/test-run-nowait.c
        deps/libuv/test/test-run-once.c
        deps/libuv/test/test-semaphore.c
        deps/libuv/test/test-shutdown-close.c
        deps/libuv/test/test-shutdown-eof.c
        deps/libuv/test/test-shutdown-twice.c
        deps/libuv/test/test-signal-multiple-loops.c
        deps/libuv/test/test-signal.c
        deps/libuv/test/test-socket-buffer-size.c
        deps/libuv/test/test-spawn.c
        deps/libuv/test/test-stdio-over-pipes.c
        deps/libuv/test/test-tcp-bind-error.c
        deps/libuv/test/test-tcp-bind6-error.c
        deps/libuv/test/test-tcp-close-accept.c
        deps/libuv/test/test-tcp-close-while-connecting.c
        deps/libuv/test/test-tcp-close.c
        deps/libuv/test/test-tcp-connect-error-after-write.c
        deps/libuv/test/test-tcp-connect-error.c
        deps/libuv/test/test-tcp-connect-timeout.c
        deps/libuv/test/test-tcp-connect6-error.c
        deps/libuv/test/test-tcp-create-socket-early.c
        deps/libuv/test/test-tcp-flags.c
        deps/libuv/test/test-tcp-oob.c
        deps/libuv/test/test-tcp-open.c
        deps/libuv/test/test-tcp-read-stop.c
        deps/libuv/test/test-tcp-shutdown-after-write.c
        deps/libuv/test/test-tcp-try-write.c
        deps/libuv/test/test-tcp-unexpected-read.c
        deps/libuv/test/test-tcp-write-after-connect.c
        deps/libuv/test/test-tcp-write-fail.c
        deps/libuv/test/test-tcp-write-queue-order.c
        deps/libuv/test/test-tcp-write-to-half-open-connection.c
        deps/libuv/test/test-tcp-writealot.c
        deps/libuv/test/test-thread-equal.c
        deps/libuv/test/test-thread.c
        deps/libuv/test/test-threadpool-cancel.c
        deps/libuv/test/test-threadpool.c
        deps/libuv/test/test-timer-again.c
        deps/libuv/test/test-timer-from-check.c
        deps/libuv/test/test-timer.c
        deps/libuv/test/test-tty.c
        deps/libuv/test/test-udp-bind.c
        deps/libuv/test/test-udp-create-socket-early.c
        deps/libuv/test/test-udp-dgram-too-big.c
        deps/libuv/test/test-udp-ipv6.c
        deps/libuv/test/test-udp-multicast-interface.c
        deps/libuv/test/test-udp-multicast-interface6.c
        deps/libuv/test/test-udp-multicast-join.c
        deps/libuv/test/test-udp-multicast-join6.c
        deps/libuv/test/test-udp-multicast-ttl.c
        deps/libuv/test/test-udp-open.c
        deps/libuv/test/test-udp-options.c
        deps/libuv/test/test-udp-send-and-recv.c
        deps/libuv/test/test-udp-send-immediate.c
        deps/libuv/test/test-udp-send-unreachable.c
        deps/libuv/test/test-udp-try-send.c
        deps/libuv/test/test-walk-handles.c
        deps/libuv/test/test-watcher-cross-stop.c
        deps/log/log.h
        deps/log/loglevel_sample.c
        deps/log/sample.c
        exercises/01_system_info/solution.c
        exercises/02_idle/solution.c
        exercises/03_fs_readsync/solution.c
        exercises/04_fs_readasync/solution.c
        exercises/05_fs_readasync_context/solution.c
        exercises/06_fs_allasync/solution.c
        exercises/07_tcp_echo_server/solution.c
        exercises/08_horse_race/solution.c
        src/interactive_horse_race/interactive_horse_race.c
        src/interactive_horse_race/interactive_horse_race.h
        src/interactive_horse_race/questions.c
        src/interactive_horse_race/tcp_server.c
        src/interactive_horse_race/track.c
        src/01_system_info.c
        src/02_idle.c
        src/03_fs_readsync.c
        src/04_fs_readasync.c
        src/05_fs_readasync_context.c
        src/06_fs_allasync.c
        src/07_tcp_echo_server.c
        src/08_horse_race.c
        src/learnuv.h)

add_executable(learnuv ${SOURCE_FILES})